objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>SubStage__c</fullName>
        <description>Sub Stage of an Opportunity for Specific Products</description>
        <inlineHelpText>Currently required for Host and Online Products</inlineHelpText>
        <label>Sub Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProductLevel3__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CF Code Provided</fullName>
                </value>
                <value>
                    <fullName>Client Training Completed</fullName>
                </value>
                <value>
                    <fullName>Client Implementation Completed</fullName>
                </value>
                <value>
                    <fullName>Billing Activated</fullName>
                </value>
                <value>
                    <fullName>Client Development Completed</fullName>
                </value>
                <value>
                    <fullName>Testing &amp; Readiness Check Completed</fullName>
                </value>
                <value>
                    <fullName>Client Files Migrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tender Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tender_Type__c</fullName>
        <label>Tender Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Require_Proposal_Support__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Proactive Proposal</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A lookup to the related Tender</description>
        <inlineHelpText>A lookup to the related Tender</inlineHelpText>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>The_Deal_Team_has_been_cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Deal Team has been cleared?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_accountable_banker_has_been_cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Help hover: AB confirms that s/he is willing to act as the AB</description>
        <inlineHelpText>AB confirms that s/he is willing to act as the AB. The AB bears responsibility for the proposed transaction and all related compliance and legal processes as well as managing conflicts and Chinese wall issues</inlineHelpText>
        <label>Accountable Banker is aware and willing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Facility_Size__c</fullName>
        <label>Total Balance / Facility Size</label>
        <summarizedField>OpportunityLineItem.Balance__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_RoRWA__c</fullName>
        <label>Total RoRWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IPO</fullName>
                </value>
                <value>
                    <fullName>Buy-side</fullName>
                </value>
                <value>
                    <fullName>Sell-side</fullName>
                </value>
                <value>
                    <fullName>DCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Barclays_Opp_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays Opp ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Opportunity_Name__c</fullName>
        <description>Unique name of opportunity</description>
        <inlineHelpText>Enter the unique name of the opportunity</inlineHelpText>
        <label>Unique Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weighted_Annualised_Income_Wealth_del__c</fullName>
        <formula>Annualised_Income_Wealth__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Annualised Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Annualised_Income__c</fullName>
        <formula>Probability *  Annualised_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Annualised Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Balance_Facility_Size__c</fullName>
        <formula>Total_Balance_Facility_Size__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Balance/Facility Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Income_this_Year__c</fullName>
        <formula>Probability *  Income_this_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Income this Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>hSetOverdueReminderDate__c</fullName>
        <description>trigger date for time base action</description>
        <label>hSetOverdueReminderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine if this Opportunity was pushed to Salesforce via API from external system (eg. Oberon)</description>
        <label>isExternal</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_My_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Related_Group_Client__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Mine</filterScope>
        <label>All My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_My_Teams_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Income_this_Year__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Everything</filterScope>
        <label>All My Teams Opportunities</label>
    </listViews>
    <listViews>
        <fullName>CIF_Key_Update</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Related_Group_Client__c</columns>
        <columns>Related_Group_Client_CIF__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>CIF Key Update (IBS)</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Lost_Opps_YTD</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Income_this_Year__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>My Teams Lost Opps (YTD)</label>
    </listViews>
    <listViews>
        <fullName>NBC_Opps</fullName>
        <columns>Opportunity_Country__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Country__c</field>
            <operation>equals</operation>
            <value>Botswana,Ghana,Kenya,Mauritius,Mozambique,Tanzania BBT,Tanzania NBC,Tanzania_NBC,Uganda,Zambia</value>
        </filters>
        <filters>
            <field>ProductLevel2List__c</field>
            <operation>contains</operation>
            <value>debt finance</value>
        </filters>
        <filters>
            <field>Segment__c</field>
            <operation>notContain</operation>
            <value>business banking,high-net,wealth</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>RoA Debt Opps</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>X1_My_Open_Opportunities_pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Related_Group_Client__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>My Open Opportunities (Pipeline)</label>
    </listViews>
    <listViews>
        <fullName>X2_My_Won_Opportunities_YTD</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Related_Group_Client__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>My Won Opportunities (YTD)</label>
    </listViews>
    <listViews>
        <fullName>X3_My_Lost_Opportunities_YTD</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>My Lost Opportunities (YTD)</label>
    </listViews>
    <listViews>
        <fullName>X4_All_My_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Related_Group_Client__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>All (Open) Opportunities - I have access</label>
    </listViews>
    <listViews>
        <fullName>X5_My_Teams_Open_Opp_s_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Related_Group_Client__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Teams Open Opp`s (Pipeline)</label>
    </listViews>
    <listViews>
        <fullName>X6_My_Teams_Won_Opps_YTD</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Income_this_Year__c</columns>
        <columns>Annualised_Income__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Private_Side__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <label>My Teams Won Opps (YTD)</label>
    </listViews>
    <recordTypes>
        <fullName>Credit_and_Banking</fullName>
        <active>true</active>
        <businessProcess>Wealth Sales Process</businessProcess>
        <description>Credit and Banking products based Opportunity</description>
        <label>Credit and Banking</label>
    </recordTypes>
    <recordTypes>
        <fullName>EDC_Opp</fullName>
        <active>true</active>
        <businessProcess>Wealth Sales Process</businessProcess>
        <label>EDC Opp</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investment</fullName>
        <active>true</active>
        <businessProcess>Wealth Sales Process</businessProcess>
        <description>Investment product based Opportunity</description>
        <label>Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offshore</fullName>
        <active>true</active>
        <businessProcess>Wealth Sales Process</businessProcess>
        <label>Offshore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Private_opportunity_RT</fullName>
        <active>true</active>
        <businessProcess>Default sales process</businessProcess>
        <description>Choose Private side for M&amp;A, Restructuring advisory roles &amp; special committees, ECM, DCM, LCM, RSG and Cross Product (all acquisition-related financing) deals. This is not a comprehensive list; consult your Compliance partner in need</description>
        <label>Private opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_opportunity_RT</fullName>
        <active>true</active>
        <businessProcess>Default sales process</businessProcess>
        <description>Public Opportunities are visible to all owners, owners manager&apos;s and deal team members.</description>
        <label>Public opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>WIMI_Opp</fullName>
        <active>true</active>
        <businessProcess>Wealth Sales Process</businessProcess>
        <label>WIMI Opp</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Asset_Hub_1_Must_have_value</fullName>
        <active>true</active>
        <description>Asset Hub 1 Must have value for USD or EUR or GBP</description>
        <errorConditionFormula>AND( ISBLANK(Asset_Hub_1a__c),OR( ISPICKVAL(CurrencyIsoCode ,&apos;GBP&apos;),
ISPICKVAL(CurrencyIsoCode ,&apos;EUR&apos;),
ISPICKVAL(CurrencyIsoCode ,&apos;USD&apos;)),
OR( $Profile.Name =&quot;Barclays Standard User&quot;, $Profile.Name =&quot;Barclays Private Side User&quot;,$Profile.Name =&quot;Standard User ( Lightning )&quot;,$Profile.Name =&quot;Standard User ( Private Lightning )&quot;))</errorConditionFormula>
        <errorDisplayField>Asset_Hub_1a__c</errorDisplayField>
        <errorMessage>Asset Hub 1 and Asset Hub 1% Must have value for USD or EUR or GBP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Asset_Hub_1_Perc_Must_have_value</fullName>
        <active>true</active>
        <description>Asset Hub 1% Must have value for USD or EUR or GBP</description>
        <errorConditionFormula>AND( ISBLANK( Asset_Hub_1perc__c ),OR( ISPICKVAL(CurrencyIsoCode ,&apos;GBP&apos;),ISPICKVAL(CurrencyIsoCode ,&apos;EUR&apos;),ISPICKVAL(CurrencyIsoCode ,&apos;USD&apos;)), OR($Profile.Name =&quot;Barclays Standard User&quot;, $Profile.Name =&quot;Barclays Private Side User&quot; ))</errorConditionFormula>
        <errorDisplayField>Asset_Hub_1perc__c</errorDisplayField>
        <errorMessage>Asset Hub 1% Must have value for USD or EUR or GBP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPF_Alert_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(StageName , &quot;Closed Won&quot;),ISPICKVAL(StageName , &quot;Mandate Won&quot;),ISPICKVAL(StageName , &quot;Contracts Finalised&quot;),ISPICKVAL(StageName ,&quot;In Implementation / Conditions Precedent&quot;)),(ProductList__c = &quot;Commercial Property Finance&quot;) ,NOT(ISPICKVAL(Notify_ABSA_Insurance_Of_This_Deal__c, &quot;Yes&quot;)),NOT(ISPICKVAL(Notify_ABSA_Insurance_Of_This_Deal__c, &quot;No&quot;)))</errorConditionFormula>
        <errorDisplayField>Notify_ABSA_Insurance_Of_This_Deal__c</errorDisplayField>
        <errorMessage>Please select an option for notifying ABSA Insurance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPF_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Relationship_Contact__c)) &amp;&amp;   ISPICKVAL(Notify_ABSA_Insurance_Of_This_Deal__c, &quot;Yes&quot;)</errorConditionFormula>
        <errorDisplayField>Relationship_Contact__c</errorDisplayField>
        <errorMessage>Please select a contact for this Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_modify_Close_Date_field</fullName>
        <active>true</active>
        <description>Close Date field can not be modified after Opportunity was previously Won or Lost</description>
        <errorConditionFormula>AND (
 $Profile.Name &lt;&gt; &apos;Barclays Administrator&apos;,
 NOT(ISCHANGED(StageName)), (TEXT( StageName ) = &quot;Closed Won&quot; || TEXT (StageName) = &quot;Closed Lost&quot;),
( ISCHANGED( CloseDate ))
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Close Date cannot be amended after the Opportunity Status is Won / Lost. 
Please contact SF Support for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_date_change</fullName>
        <active>true</active>
        <description>Requires reason for change if close date field has been modified</description>
        <errorConditionFormula>AND(
$User.ProfileId = &apos;00e24000001AULo&apos;,
ISCHANGED( CloseDate ),
Reason_for_close_date_change__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please enter a reason for close date change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_Opportunity_Pending_Approval</fullName>
        <active>true</active>
        <description>Stops a user from closing an opportunity while the Opportunity is still pending approval from the Product Partner</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e24000000mKlR&quot; 
&amp;&amp; 
$User.ProfileId &lt;&gt; &quot;00e24000000obeD&quot;
&amp;&amp;
(  
(NOT(ISNEW()) &amp;&amp; ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName, &quot;Closed Won&quot;))
)
&amp;&amp;
ISPICKVAL(ProductPartnerApprovalStatus__c, &quot;Pending&quot;)</errorConditionFormula>
        <errorMessage>This opportunity is pending a Product Partner acknowledgement and can not be Closed Won</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_opportunity_Related_Group_CIF</fullName>
        <active>true</active>
        <description>Stops a user from closing an opportunity without selecting Related Group Client CIF.</description>
        <errorConditionFormula>AND( 

ISPICKVAL(  Owner.Hub__c , &quot;International Banking South Africa&quot;))
 &amp;&amp; ISPICKVAL(StageName, &quot;Closed Won&quot;) &amp;&amp;  ISBLANK(Related_Group_Client_CIF__c)</errorConditionFormula>
        <errorMessage>This opportunity cannot be closed without adding the Related Group Client and the Related Group Client CIF.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_a_referral_name_on_a_referred_Opp</fullName>
        <active>true</active>
        <description>Request the user to enter a User as a referrer if opportunity is referred</description>
        <errorConditionFormula>And (
ISPICKVAL(CIB_Referral__c, &apos;Yes&apos;), 
 Name_of_CIB_Referrer__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>Please enter a referrer name for referred opportunities</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Drawdown_Mandatory</fullName>
        <active>true</active>
        <description>First drawdown date and first drawdown amount must be mandatory for non-Oberon linked debt family opportunities for stage initial solution proposed and later (CIBDIGSALP-2294)</description>
        <errorConditionFormula>AND 
( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;Barclays Administrator&apos;,
OR(ISBLANK(First_Drawdown_Manual__c),
   ISBLANK( First_Drawdown_Amount__c) 
),
OR(
ISCHANGED(StageName),
ISCHANGED(First_Drawdown_Manual__c),
ISCHANGED(First_Drawdown_Amount__c)
),
OR(
   ISPICKVAL(StageName, &apos;Initial Solution Proposed&apos;),
   ISPICKVAL(StageName, &apos;Credit Case Submitted&apos;),
   ISPICKVAL(StageName, &apos;Credit Sanctions Obtained&apos;),
   ISPICKVAL(StageName, &apos;Pricing Finalised&apos;),
   ISPICKVAL(StageName, &apos;Mandate Won&apos;),
   ISPICKVAL(StageName, &apos;Contracts Finalised&apos;),
   ISPICKVAL(StageName, &apos;In Implementation / Conditions Precedent&apos;),
   ISPICKVAL(StageName, &apos;Closed Won&apos;)
),
NOT(isExternal__c),
NOT(CONTAINS(ProductLevel2List__c, &apos;Resource and Project Finance&apos;)),
CONTAINS(ProductList__c, &apos;Global Finance&apos;),
OR(
   RecordTypeId = &apos;01224000000Kx2m&apos;,
   RecordTypeId = &apos;01224000000Kx2n&apos;
)
)</errorConditionFormula>
        <errorDisplayField>First_Drawdown_Manual__c</errorDisplayField>
        <errorMessage>First Drawdown Date and Amount is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Financial_information_2_60</fullName>
        <active>true</active>
        <description>Makes Financial information mandatory when probability is &gt;60% (Investment)</description>
        <errorConditionFormula>AND( 
RecordTypeId = &apos;01224000000TOY1&apos;,  
Probability &gt;= 0.6, 
ISBLANK( Amount ) || 
ISBLANK( Margin__c ) || 
ISBLANK( Percentage__c ))</errorConditionFormula>
        <errorMessage>You must enter information in the Income Summary fields when the Probability of the Opportunity is greater than 60%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Financial_information_60</fullName>
        <active>true</active>
        <description>Makes Financial information mandatory when probability is &gt;60% (Credit and Banking)</description>
        <errorConditionFormula>AND(
RecordTypeId = &apos;01224000000TOY0&apos;,
Probability   &gt;=  0.6,
ISBLANK( Amount ) ||
ISBLANK( Margin__c )||
ISBLANK(Fee_Amount__c))</errorConditionFormula>
        <errorMessage>You must enter information in the Income Summary fields when the Probability of the Opportunity is greater than 60%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Close_Opp_With_Button</fullName>
        <active>true</active>
        <description>Validation rule to check that we are closing the opportunity through the Close Opportunity Button. Limited to the Barclays Standard User and Barclays Private Side User Roles</description>
        <errorConditionFormula>AND
(
OR($User.ProfileId = &apos;00e24000000q40t&apos;,$User.ProfileId = &apos;00e24000000FODM&apos;,$User.ProfileId = &apos;00e1p000001Afgp&apos;,$User.ProfileId = &apos;00e1p000001Afgu&apos;),
ISCHANGED(StageName),
OR(TEXT(StageName) = &apos;Closed Won&apos;, TEXT(StageName) = &apos;Closed Lost&apos;),
Closed_via_Visual_Workflow__c = false
)</errorConditionFormula>
        <errorMessage>Opportunity must be closed via the Close Opportunity Button.  If you are on the Opportunity edit page, click Cancel and then click on the Close Opportunity button</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_a_Product_Level_2</fullName>
        <active>true</active>
        <description>Validation rule to ensure that a Level 2 Product for an opportunity in &apos;Initial Solution Proposed&apos;, &apos;Credit Case Submitted&apos;, &apos;Credit Sanctions Obtained&apos;, &apos;Pricing Finalised&apos;, &apos;Mandate Won&apos; &amp; &apos;Contracts Finalised&apos; stages is chosen</description>
        <errorConditionFormula>AND( 
ISCHANGED(StageName), 
OR( 
ISPICKVAL(StageName, &apos;Initial Solution Proposed&apos;), 
ISPICKVAL(StageName, &apos;Credit Case Submitted&apos;), 
ISPICKVAL(StageName, &apos;Credit Sanctions Obtained&apos;), 
ISPICKVAL(StageName, &apos;Pricing Finalised&apos;), 
ISPICKVAL(StageName, &apos;Mandate Won&apos;), 
ISPICKVAL(StageName, &apos;Contracts Finalised&apos;) 
), 
ISBLANK(ProductLevel2List__c) 
)</errorConditionFormula>
        <errorMessage>You need a Level 2 Product (on the Product page) for an opportunity in &apos;Initial Solution Proposed&apos;, &apos;Credit Case Submitted&apos;, &apos;Credit Sanctions Obtained&apos;, &apos;Pricing Finalised&apos;, &apos;Mandate Won&apos; &amp; &apos;Contracts Finalised&apos; stages.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_a_Product_Level_3</fullName>
        <active>true</active>
        <description>Need a Product Level 3 for an &apos;In Implementation / Conditions Precedent&apos; or &apos;Closed Won&apos; Opportunity</description>
        <errorConditionFormula>OR(ISPICKVAL(StageName, &apos;In Implementation / Conditions Precedent&apos;),ISPICKVAL(StageName, &apos;Closed Won&apos;))
&amp;&amp; OR(RecordTypeId = &apos;01224000000Kx2m&apos;,RecordTypeId = &apos;01224000000Kx2n&apos;)
&amp;&amp; ProductLevel3Count__c = 0 
&amp;&amp; ISCHANGED(StageName)</errorConditionFormula>
        <errorMessage>You need a Level 3 Product for an opportunity with &apos;In Implementation / Conditions Precedent&apos; or &apos;Closed Won&apos; stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_of_stages</fullName>
        <active>true</active>
        <description>Standard users cannot amend the opportunity stage to a previous stage</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;Barclays Administrator&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Delegated Admins&apos;,
CASE( StageName , 
&quot;Opportunity Identified&quot;,1, 
&quot;Client Engaged&quot;,2, 
&quot;Needs Established&quot;,3, 
&quot;Initial Solution Proposed&quot;,4, 
&quot;Credit Case Submitted&quot;,5, 
&quot;Credit Sanctions Obtained&quot;,6, 
&quot;Pricing Finalised&quot;,7, 
&quot;Mandate Won&quot;,8,
&quot;Contracts Finalised&quot;,9,
&quot;In Implementation / Conditions Precedent&quot;,10,
&quot;Closed Won&quot;,11, 
&quot;Closed Lost&quot;,12,0) 
&lt; 
CASE(PRIORVALUE(StageName) , 
&quot;Opportunity Identified&quot;,1, 
&quot;Client Engaged&quot;,2, 
&quot;Needs Established&quot;,3, 
&quot;Initial Solution Proposed&quot;,4, 
&quot;Credit Case Submitted&quot;,5, 
&quot;Credit Sanctions Obtained&quot;,6, 
&quot;Pricing Finalised&quot;,7, 
&quot;Mandate Won&quot;,8,
&quot;Contracts Finalised&quot;,9,
&quot;In Implementation / Conditions Precedent&quot;,10,
&quot;Closed Won&quot;,11, 
&quot;Closed Lost&quot;,12,0))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>You cannot move the opportunity stage to a previous stage. Please contact your administrator if needed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_of_stages_Wealth</fullName>
        <active>true</active>
        <description>Restricts amending opportunity stage to a previous stage</description>
        <errorConditionFormula>AND ( 
$User.ProfileId = &apos;00e24000001AULo&apos;, 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
CASE( StageName , 
&quot;Identified&quot;,1, 
&quot;Qualified&quot;,3, 
&quot;Needs Analysis&quot;,4, 
&quot;Proposal&quot;,5, 
&quot;Presentation&quot;,5, 
&quot;In Progress&quot;,6, 
&quot;Accepted&quot;,7, 
&quot;Closed Won&quot;, 8, 
&quot;Closed Lost&quot;,8,0) 
&lt; 
CASE(PRIORVALUE(StageName) , 
&quot;Identified&quot;,1, 
&quot;Qualified&quot;,2, 
&quot;Needs Analysis&quot;,3, 
&quot;Proposal&quot;,4, 
&quot;Presentation&quot;,4, 
&quot;In Progress&quot;,6, 
&quot;Accepted&quot;,7, 
&quot;Closed Won&quot;, 10, 
&quot;Closed Lost&quot;,10,0)
)</errorConditionFormula>
        <errorMessage>You cannot move to this stage from the current stage. Please contact your Administrator for further assistance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priority_Reason_required</fullName>
        <active>true</active>
        <description>SFA-271 if an Opportunity checkbox Review is checked, a reason must be provided</description>
        <errorConditionFormula>ISCHANGED( Priority__c ) &amp;&amp;    NOT ISchanged  (Priority_Reason__c) &amp;&amp;  (Priority__c  = True)</errorConditionFormula>
        <errorDisplayField>Priority_Reason__c</errorDisplayField>
        <errorMessage>A reason is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Private_Side_Classification</fullName>
        <active>true</active>
        <description>The private side classification needs to be populated on a private side opportunity creation and cannot be changed after creation</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e24000000mKlR&quot;
&amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e24000000obeD&quot;
&amp;&amp;
RecordTypeId = &quot;01224000000Kx2m&quot;
&amp;&amp;
(
 (ISNEW() &amp;&amp; ISBLANK(TEXT(PrivateSideClassification__c)))
 ||
 (NOT(ISNEW()) &amp;&amp; ISCHANGED(PrivateSideClassification__c) &amp;&amp; NOT(ISBLANK(TEXT(PRIORVALUE(PrivateSideClassification__c)))))
)</errorConditionFormula>
        <errorDisplayField>PrivateSideClassification__c</errorDisplayField>
        <errorMessage>The Private Side Classification needs to be populated on a private side opportunity creation and cannot be changed after creation</errorMessage>
    </validationRules>
</CustomObject>